record audio from i2s microphone to SD card
After connecting to Golioth, record audio for a configurable number of
seconds and store it on the SD card.

Signed-off-by: Mike Szczys <mike@golioth.io>

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -15,6 +15,7 @@ set(bsp_includes
 
 idf_component_register(SRCS
                         "app_main.c"
+                        "audio.c"
                         "${esp_idf_common}/shell.c"
                         "${esp_idf_common}/wifi.c"
                         "${esp_idf_common}/nvs.c"
