add support for m5stack_coreS3
- SD card operations for core2 moved to same file as the PMU functions and
  named using the standardized bsp function names.
- Added coreS3 BSP using IDF Component Manager
- Micrphone init and record_wave functions implemente for both platforms,
  guarded with ifdef statements

Signed-off-by: Mike Szczys <mike@golioth.io>

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,17 +1,24 @@
 set(esp_idf_common "../submodules/golioth-firmware-sdk/examples/esp_idf/common")
 
-set(bsp_srcs
-    "m5stack_core2/m5stack_core2.c"
-    "m5stack_core2/axp192/axp192.c"
-    "m5stack_core2/axp192/axp192_i2c.c"
-    "m5stack_core2/i2c_bus/i2c_device.c"
-)
+if(CONFIG_IDF_TARGET_ESP32)
+    message("################## Building for the m5stack Core2 ##########################")
+    set(bsp_srcs
+        "m5stack_core2/m5stack_core2.c"
+        "m5stack_core2/axp192/axp192.c"
+        "m5stack_core2/axp192/axp192_i2c.c"
+        "m5stack_core2/i2c_bus/i2c_device.c"
+    )
 
-set(bsp_includes
-    "m5stack_core2"
-    "m5stack_core2/axp192"
-    "m5stack_core2/i2c_bus"
-)
+    set(bsp_includes
+        "m5stack_core2"
+        "m5stack_core2/axp192"
+        "m5stack_core2/i2c_bus"
+    )
+endif(CONFIG_IDF_TARGET_ESP32)
+
+if(CONFIG_IDF_TARGET_ESP32S3)
+    message("################## Building for the m5stack CoreS3 ##########################")
+endif(CONFIG_IDF_TARGET_ESP32S3)
 
 idf_component_register(SRCS
                         "app_main.c"
@@ -25,6 +32,7 @@ idf_component_register(SRCS
                     INCLUDE_DIRS
                         "${esp_idf_common}"
                         "${bsp_includes}"
+                        "."
 
                     PRIV_REQUIRES
                         "golioth_sdk"
